# zero2prod

./: Cargo.toml  Dockerfile  LICENSE  spec.yaml
.cargo/: config.toml
.github/workflows/: general.yml
migrations/: 20230122202043_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
