[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = { version = "4.0.0" }
tokio = { version = "1.0.0", features = ["macros", "rt-multi-thread"]}
serde = { version = "1", features = ["derive"]}
config = { version = "0.13" }
uuid = { version = "1", features = ["v4"]}
chrono = { version = "0.4.15" }
env_logger = "0.10.0"
log = "0.4.17"
tracing = { version = "0.1.37", default-features = false, features = ["log"] }
tracing-subscriber = { version = "0.3.16", default-features = false, features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.6"

[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"]

[dev-dependencies]
reqwest = "0.11"
